@@ -83,7 +83,7 @@ wired_new_auto_connection (NMDevice *device,
 	uuid = nm_utils_uuid_generate ();
 	g_object_set (s_con,
 				  NM_SETTING_CONNECTION_ID, DEFAULT_WIRED_NAME,
-				  NM_SETTING_CONNECTION_TYPE, NM_SETTING (s_wired)->name,
+				  NM_SETTING_CONNECTION_TYPE, nm_setting_get_name (NM_SETTING (s_wired)),
 				  NM_SETTING_CONNECTION_AUTOCONNECT, TRUE,
 				  NM_SETTING_CONNECTION_UUID, uuid,
 				  NULL);
@@ -454,7 +454,7 @@ get_pppoe_secrets_cb (GtkDialog *dialog,
 	if (!secrets) {
 		g_set_error (&err, NM_SETTINGS_ERROR, 1,
 					 "%s.%d (%s): failed to hash setting '%s'.",
-					 __FILE__, __LINE__, __func__, setting->name);
+					 __FILE__, __LINE__, __func__, nm_setting_get_name (setting));
 		goto done;
 	}
 
@@ -464,7 +464,7 @@ get_pppoe_secrets_cb (GtkDialog *dialog,
 	settings_hash = g_hash_table_new_full (g_str_hash, g_str_equal,
 										   g_free, (GDestroyNotify) g_hash_table_destroy);
 
-	g_hash_table_insert (settings_hash, g_strdup (setting->name), secrets);
+	g_hash_table_insert (settings_hash, g_strdup (nm_setting_get_name (setting)), secrets);
 	dbus_g_method_return (info->context, settings_hash);
 	g_hash_table_destroy (settings_hash);
 
@@ -610,7 +610,7 @@ get_8021x_secrets_cb (GtkDialog *dialog,
 	if (!secrets) {
 		g_set_error (&err, NM_SETTINGS_ERROR, 1,
 					 "%s.%d (%s): failed to hash setting '%s'.",
-					 __FILE__, __LINE__, __func__, setting->name);
+					 __FILE__, __LINE__, __func__, nm_setting_get_name (setting));
 		goto done;
 	}
 
@@ -623,7 +623,7 @@ get_8021x_secrets_cb (GtkDialog *dialog,
 	settings_hash = g_hash_table_new_full (g_str_hash, g_str_equal,
 										   g_free, (GDestroyNotify) g_hash_table_destroy);
 
-	g_hash_table_insert (settings_hash, g_strdup (setting->name), secrets);
+	g_hash_table_insert (settings_hash, g_strdup (nm_setting_get_name (setting)), secrets);
 	dbus_g_method_return (context, settings_hash);
 	g_hash_table_destroy (settings_hash);
 
