@@ -1007,8 +1007,8 @@ get_vpn_connections (NMApplet *applet)
 			continue;
 
 		if (!nm_connection_get_setting (connection, NM_TYPE_SETTING_VPN)) {
-			const char *name = NM_SETTING (s_con)->name;
-			g_warning ("%s: VPN connection '%s' didn't have requires vpn setting.", __func__, name);
+			g_warning ("%s: VPN connection '%s' didn't have requires vpn setting.", __func__,
+					   nm_setting_get_name (NM_SETTING (s_con)));
 			continue;
 		}
 
