@@ -1,5 +1,17 @@
 2008-10-27  Dan Williams  <dcbw@redhat.com>
 
+	Patch from Tambet Ingo <tambet@gmail.com>
+
+	* src/applet-device-cdma.c
+	  src/applet-device-gsm.c
+	  src/applet-device-wifi.c
+	  src/applet-device-wired.c
+	  src/applet.c
+	  src/gconf-helpers/gconf-helpers.c
+		- Use setting accessors
+
+2008-10-27  Dan Williams  <dcbw@redhat.com>
+
 	* src/connection-editor/nm-connection-editor.c
 		- Don't allow editing of read-only connections
 
